--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+body {
+  background-color: #345;
+}
+
 .App {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: white;
+  color: white;
 }
