--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Quintessential&display=swap');
+
 body {
   background-color: #345;
+  font-family: Alegreya, serif;
 }
 
 .App {
