--- a/src/Accordion.css
+++ b/src/Accordion.css
@@ -2,8 +2,8 @@
   border: 1px solid #111;
   border-radius: 6px;
   overflow: hidden;
-  max-width: 1020px;
-  margin: auto;
+  width: 100%;
+  margin: 1rem auto;
   background: #111;
 }
 
