--- a/src/IngredientCard.css
+++ b/src/IngredientCard.css
@@ -28,8 +28,9 @@ svg.IngredientCard .prep .SvgTextArea {
 }
 
 svg.IngredientCard .SvgScales .SvgTextArea {
-  font-size: 2.25px;
+  font-size: 3px;
   color: white;
+  text-shadow: #323026 0.03em 0.03em 0.01em;
 }
 
 svg.IngredientCard .text .SvgTextArea {
